2001-03-03  John David Anglin  <dave@hiauly1.hia.nrc.ca>

	* fixinc/fixlib.h (t_bool): Add identifier `t_bool' in typedef.
	* fixinc/server.c (read_pipe_timeout): Use enum t_bool instead of
	t_bool in declaration because pcc can't combine volatile with typedef
	types.

2001-03-03  Neil Booth  <neil@daikokuya.demon.co.uk>

	* longlong.h (umul_ppmm): Don't use a multiline string.

2001-03-03  Neil Booth  <neil@daikokuya.demon.co.uk>

	* cpplex.c (_cpp_lex_token): Don't warn about directives in
	macro arguments when looking for the '('.
	* cppmacro.c (funlike_invocation_p): Set parsing_args to
	2 when really parsing arguments; 1 when looking for '('.
	Always restore the lexer position.

2001-03-03  Neil Booth  <neil@daikokuya.demon.co.uk>

	* cpplex.c (parse_string): Unconditionally pedwarn.

2001-03-03  Neil Booth  <neil@daikokuya.demon.co.uk>

	* cpp.texi: Update.
	* cppexp.c (parse_number): Update. 
	* cpplex.c (parse_string): Pedwarn if multiline string does not
	result from a system header's macro.
	* cpplib.h (sys_objmacro_p): Rename sys_macro_p.
	* cppmacro.c (sys_objmacro_p): Rename sys_macro_p.  Return true
	for function-like macros too.

2001-03-02  John David Anglin  <dave@hiauly1.hia.nrc.ca>

	* print-rtl.c (print_rtx): Cast enums to int for comparison.
	* c-decl.c (grokdeclarator): Cast enums to int for comparison and
	shifts.
	* c-format.c (C_STD_VER): Cast to int for comparisons.
	(check_function_format): Cast various enums to int for &.
	(maybe_read_dollar_number): Likewise.
	(check_format_info): Likewise.
	(check_format_info_main): Likewise.
	* expr.c (emit_move_insn_1): Cast enums to unsigned int for comparison.
	(safe_from_p): Likewise.
	* varasm.c (const_hash): Cast enum to int for %.
	* emit-rtl.c (init_emit_once): Use int loop variable to work around
	pcc enum problems with < and ++ operators.
	* regclass.c (init_reg_sets_1): Cast enums for comparison.
	(choose_hard_reg_mode): Use unsigned int to iterate over CCmodes.